plugins {
    id 'eclipse'
    id 'net.minecraftforge.gradle' version '[6.0.36,6.2)'
}

version = '1.0'
base.archivesName = "packloader"

java.toolchain.languageVersion = JavaLanguageVersion.of(8)

minecraft {
    mappings channel: 'snapshot', version: '20201028-1.16.3'

    copyIdeResources = true

    runs {
        client {
            def mcreatorJvmOptions = System.getenv('MCREATOR_JVM_OPTIONS')
            if (mcreatorJvmOptions) {
                jvmArgs += mcreatorJvmOptions.split("\\s+").findAll { it.trim() }.toList()
            }
        }

        server {
        }

        configureEach {
            workingDirectory project.file('../run')

            property 'forge.logging.markers', 'REGISTRIES'
            property 'forge.logging.console.level', 'debug'

            mods {
                packloader {
                    source sourceSets.main
                }
            }
        }
    }
}

dependencies {
    minecraft 'net.minecraftforge:forge:${generator.getGeneratorMinecraftVersion()}-${generator.getGeneratorBuildFileVersion()}'
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8' // Use the UTF-8 charset for Java compilation
}

apply from: 'mcreator.gradle'